# django-plugin-field-day

./: .cookiecutter.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  compose.yaml  conftest.py  entrypoint.sh  manage.py  mise.toml  package-lock.json  pypi_compatible_build.py  pyproject.toml  requirements.txt
.biobuddies/: autoformat-excludes  ruff.toml
.config/: mise.toml
.github/workflows/: act.yaml  document.yaml  export-docs.yaml
config/: settings.py  urls.py
django_plugin_field_day/: __init__.py
documents/mariadb/: copyright  index.html
tests/: test_django_plugin_field_day.py
tests/test_project/: settings.py  urls.py
